# hypercraft

./: .gitignore  Cargo.toml  Makefile  README.md  hello_world.S  qemu-virt.dtb  qemu-virt.dtc  rust-toolchain.toml
.cargo/: config.toml
apps/hello_world/: Cargo.toml
apps/hello_world/src/: lang_items.rs  linker.ld  logging.rs  main.rs  sbi.rs
apps/hello_world/src/hyp_alloc/: frame_allocator.rs  heap_allocator.rs  mod.rs
apps/hv/: Cargo.toml
apps/hv/src/: main.rs
crates/driver_cpu/: Cargo.toml
crates/driver_cpu/src/: lib.rs
crates/dtb/: Cargo.toml
crates/dtb/src/: lib.rs
crates/lazy_init/: Cargo.toml
guest/hello_world/: Cargo.toml
guest/hello_world/src/: linker.ld  main.rs
guest/linux/: .gitignore
guest/rCore-Tutorial-ch4/: rCore-Tutorial-ch4
guest/rCore-Tutorial-v3/: .gitignore
guest/rtthread/: rtthread.dts
hv/: Cargo.toml
hv/src/: main.rs
hvruntime/: Cargo.toml
hvruntime/src/: gpm.rs  hv.rs  lib.rs  linker.ld  trap.rs
src/: ffi.rs  hal.rs  lib.rs  memory.rs  percpu.rs  traits.rs  vcpus.rs
src/arch/: dummy.rs
src/arch/aarch/: mod.rs
src/arch/aarch64/: contextFrame.rs  context_frame.rs  cpu.rs  emu.rs  ept.rs  exception.rs  fpsimd.S  gic.rs  guest.S  hvc.rs  interrupt.rs  ipi.rs  ivc.rs  manageVm.rs  memcpy.S  memset.S  mod.rs  platform_qemu.rs  psci.rs  smc.rs  sync.rs  timer.rs  util.rs  vcpu.rs  vcpu_array.rs  vgic.rs  vm.rs  vmConfig.rs  vm_bak.rs
src/arch/aarch64/config/: config.rs  mod.rs  qemu_def.rs  vm_def.rs
src/arch/aarch64/image/: pi4_fin.dtb
src/arch/aarch64/platform/: mod.rs  platform_common.rs  platform_qemu.rs
src/arch/aarch64/utils/: bitmap.rs  mod.rs
src/arch/riscv/: csrs.rs  detect.rs  ept.rs  guest.S  guest.rs  mem_extable.S  mod.rs  regs.rs  sbi.rs  smp.rs  vcpu.rs  vm.rs  vm_pages.rs  vmexit.rs
src/arch/riscv/devices/: plic.rs
src/arch/riscv/sbi/: base.rs  dbcn.rs  mod.rs  pmu.rs  rfnc.rs  srst.rs
ulib/libax/: Cargo.toml
ulib/libax/src/: lib.rs
ulib/libax/src/hv/: mod.rs
