[package]
name = "hypercraft"
version = "0.1.0"
edition = "2021"
authors = ["KuangjuX <kuangjux@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4.17"
memoffset = { version = ">=0.6.5", features = ["unstable_const"] }
arrayvec = { version = "0.7.2", default-features = false }
spin = { version = "0.9", features = ["once", "rwlock", "spin_mutex"] }
tock-registers = "0.8.1"

fdt = {version = "0.1.5"}

cortex-a = "8.1.1"
lazy_static = "1.4"
aarch64-cpu = "9.3"

# arceos crates
page_table = { path = "../page_table" }
page_table_entry = { path = "../page_table_entry" }
arm_gic = { path = "../arm_gic" }
spinlock = { path = "../spinlock" }
percpu = {path = "../percpu"}

percpu_macros = {path = "../percpu_macros"}

# [dependencies.tock-registers]
# version = "0.7.0"
# default-features = false
# features = ["register_types"]


[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
riscv-decode = { git = "https://github.com/KuangjuX/riscv-decode.git" }
sbi-spec = { version = "0.0.6", features = ["legacy"] }
sbi-rt = {version = "0.0.2", features = ["integer-impls", "legacy"]}
