[package]
name = "hypercraft"
version = "0.1.0"
edition = "2021"
authors = ["KuangjuX <kuangjux@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4.17"
memoffset = { version = ">=0.6.5", features = ["unstable_const"] }
arrayvec = { version = "0.7.2", default-features = false }
spin = { version = "0.9", features = ["once", "rwlock", "spin_mutex"] }
tock-registers = "0.8.1"
# arceos crates
page_table = { git = "https://github.com/rcore-os/arceos.git", branch = "hypervisor" }
page_table_entry = { git = "https://github.com/rcore-os/arceos.git", branch = "hypervisor" }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
riscv-decode = { git = "https://github.com/KuangjuX/riscv-decode.git" }
sbi-spec = { version = "0.0.7-alpha.3", features = ["legacy"] }
sbi-rt = { version = "0.0.3-rc.4", features = ["integer-impls", "legacy"] }
rustsbi = { git = "https://github.com/rustsbi/rustsbi", features = ["machine"] }

[lib]
name = "hypercraft"
test = false
bench = false
