[package]
name = "hypercraft"
version = "0.1.0"
edition = "2021"
authors = ["KuangjuX <kuangjux@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4.17"
memoffset = { version = ">=0.6.5", features = ["unstable_const"] }
arrayvec = { version = "0.7.2", default-features = false }
spin = { version = "0.9", features = ["once", "rwlock", "spin_mutex"] }
tock-registers = "0.8.1"
# arceos crates
page_table = { path = "../page_table" }
page_table_entry = { path = "../page_table_entry" }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
riscv-decode = { git = "https://github.com/KuangjuX/riscv-decode.git" }
sbi-spec = "0.0.7"
rustsbi = { version = "0.4.0", features = ["forward"] }

[lib]
name = "hypercraft"
test = false
bench = false
