[package]
name = "hvruntime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axlog = {path = "../../arceos/modules/axlog"}
axalloc = {path = "../../arceos/modules/axalloc"}
axhal   = {path = "../../arceos/modules/axhal"}
crate_interface = { path = "../../arceos/crates/crate_interface" }



[features]
default = []
smp = []
alloc = []

