[package]
name = "hvruntime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axlog = {path = "../../arceos/modules/axlog"}
axalloc = {path = "../../arceos/modules/axalloc"}
axhal   = {path = "../../arceos/modules/axhal"}
axconfig = { path = "../../arceos/modules/axconfig" }
crate_interface = { path = "../../arceos/crates/crate_interface" }
hypercraft = { path = "../"}



[features]
default = []
smp = []
alloc = []

