[package]
name = "hvruntime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axlog = {path = "../../arceos/modules/axlog"}
axalloc = {path = "../../arceos/modules/axalloc", optional = true}
axhal   = {path = "../../arceos/modules/axhal"}
axconfig = { path = "../../arceos/modules/axconfig" }
crate_interface = { path = "../../arceos/crates/crate_interface" }
page_table = { path = "../../arceos/crates/page_table" }
page_table_entry = { path = "../../arceos/crates/page_table_entry" }
hypercraft = { path = "../"}



[features]
default = []
smp = []
alloc = ["dep:axalloc"]
paging = ["alloc", "axhal/paging"]

