[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbi-rt = "0.0.2"
buddy_system_allocator = "0.6"
spin = "0.9.4"
hypercraft = {path = "../../"}
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
