[package]
name = "libax"
version = "0.1.0"
edition = "2021"
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "yfblock <321353225@qq.com>",
    "scPointer <bhy18@mails.tsinghua.edu.cn>",
    "Shiping Yuan <robert_yuan@pku.edu.com>",
    "KuangjuX <kuangjux@outlook.com>"
]
description = "ArceOS user library with an interface similar to rust std"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/ulib/ibax"
documentation = "https://rcore-os.github.io/arceos/libax/index.html"

[features]
# Generate bindings for C code
cbindings = ["cbindgen", "bindgen"]

# Multicore
# smp = ["axruntime/smp"]

# Floating point/SIMD
# fp_simd = ["axhal/fp_simd"]

# Memory
alloc = ["dep:axalloc", "hvruntime/alloc", "axio/alloc"]
# paging = ["axruntime/paging"]

# Interrupts
# irq = ["axruntime/irq"]

# Multi-task
# multitask = ["axtask", "axruntime/multitask", "axsync/multitask"]
# sched_fifo = ["axtask/sched_fifo"]
# sched_rr = ["axtask/sched_rr", "irq"]
# sched_cfs = ["axtask/sched_cfs", "irq"]

# File system
# fs = ["alloc", "axruntime/fs", "dep:axfs"]

# Networking
# net = ["axruntime/net", "dep:axnet"]

# Display
# display = ["axruntime/display", "dep:axdisplay"]

# Logging
log-level-off = ["axlog/log-level-off"]
log-level-error = ["axlog/log-level-error"]
log-level-warn = ["axlog/log-level-warn"]
log-level-info = ["axlog/log-level-info"]
log-level-debug = ["axlog/log-level-debug"]
log-level-trace = ["axlog/log-level-trace"]

# Platform
platform-pc-x86 = ["axhal/platform-pc-x86", "axdriver?/bus-pci"]
platform-qemu-virt-riscv = ["axhal/platform-qemu-virt-riscv", "axdriver?/bus-mmio"]
platform-qemu-virt-aarch64 = ["axhal/platform-qemu-virt-aarch64", "axdriver?/bus-mmio"]

default = ["axtask?/sched_fifo"]

[dependencies]
spinlock = { path = "../../../arceos/crates/spinlock" }
axio = { path = "../../../arceos/crates/axio" }
axerrno = { path = "../../../arceos/crates/axerrno" }
axalloc = { path = "../../../arceos/modules/axalloc", optional = true }
axdisplay = { path = "../../../arceos/modules/axdisplay", optional = true }
axdriver = { path = "../../../arceos/modules/axdriver", optional = true }
axhal = { path = "../../../arceos/modules/axhal" }
axlog = { path = "../../../arceos/modules/axlog" }
axfs = { path = "../../../arceos/modules/axfs", optional = true }
axnet = { path = "../../../arceos/modules/axnet", optional = true }
# axruntime = { path = "../../../arceos/modules/axruntime", default-features = false }
axsync = { path = "../../../arceos/modules/axsync", default-features = false, optional = true }
axtask = { path = "../../../arceos/modules/axtask", default-features = false, optional = true }
hvruntime = {path = "../../hvruntime", default-features = false}

[build-dependencies]
cbindgen = { version = "0.24", optional = true }
bindgen ={ version = "0.64", optional = true }
